--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <head>
     <title>Trainer</title>
     <meta charset="UTF-8">
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="app.css" type="text/css">
+    <meta name="application-name" content="Trainer">
 </head>
 <body>
 <script src="app.js" type="application/javascript"></script>
